[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "opk"
version = "0.0.1"
authors = [
  { name="Matteo (Matt3o) Spinelli", email="info@matt3o.com" },
]
description = "Open Programmatic Keycap"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache-2.0",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/cubiq/OPK"
"Bug Tracker" = "https://github.com/cubiq/OPK/issues"
